# language-tools

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  generate_archive.sh  test.c  test.h  test.txt  test_h.txt
examples/lisp/: BUILD  keywords.txt  lisp_cli.c  rules.txt  semantics.c  semantics.h
examples/lisp/config/: rules.txt  symbols.txt
lang/lexer/: BUILD  lexer_builder.bzl  lexer_builder.c  lexer_builder.h  lexer_builder_main.c  lexer_helper.c  lexer_helper.h  lexer_test.c  token.c  token.h
lang/lexer/testdata/: comments.txt  strings.txt  symbols.txt
lang/parser/: BUILD  parser.c  parser.h  parser_builder.bzl  parser_builder.c  parser_builder.h  parser_test.c  test
lang/parser/production_lexer/: BUILD  comments.txt  keywords.txt  symbols.txt
lang/parser/production_parser/: BUILD  production_parser.c  production_parser_generator.c  production_parser_main.c  production_parser_semantics.c  production_parser_semantics.h  production_parser_test.c
lang/semantic_analyzer/: BUILD  expression_tree.h  semantic_analyzer.c  semantic_analyzer.h
language-tools/: BUILD  intern.c  intern.h
language-tools/lexer/: BUILD  lexer_builder.bzl  lexer_builder.c  lexer_builder.h  lexer_builder_main.c  lexer_helper.c  lexer_helper.h  lexer_test.c  token.c  token.h
language-tools/parser/: BUILD  parser.c  parser.h  parser_builder.bzl  parser_builder.c  parser_builder.h  parser_test.c
language-tools/semantic_analyzer/: BUILD  expression_tree.c  expression_tree.h  semantic_analyzer.c  semantic_analyzer.h
(+14 files in other folders)
