""" MODULE.bazel """

module(
    name = "jeffmanzione_language_tools",
    version = "1.0.2",
)

bazel_dep(name = "jeffmanzione_c_data_structures", version = "1.0.3")
bazel_dep(name = "jeffmanzione_file_utils", version = "1.0.0")
bazel_dep(name = "jeffmanzione_intern", version = "1.0.2")
bazel_dep(name = "jeffmanzione_rzalloc", version = "1.0.1")
bazel_dep(name = "rules_cc", version = "0.2.14")
